Preserve enabled dlcs when launching hoi4